# distilbert-emotion-classifier-fastapi

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  learning_log.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: config.yaml
research-notes/: approach.md
src/: exceptions.py  logger.py
src/api/: app.py  gradio_demo.py
src/data/: load_raw.py  schemas.py  validation.py
src/models/: base.py
tests/: test_scaffold.py
utils/: seed.py
